syntax = "proto3";

package com.ruyuan2020.im;

option java_multiple_files = true;
option java_package = "com.ruyuan2020.im.common.protobuf";
option java_outer_classname = "OnlineRequestProto";

message OnlineRequest {
  string token = 1;
}